--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/peach"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -11,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/main_text"
-        android:textSize="25sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -30,5 +31,16 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.912"
         app:srcCompat="@drawable/sango_and_kirara" />
+
+    <Button
+        android:id="@+id/Surprise"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/button"
+        android:backgroundTint="@color/red"
+        app:layout_constraintBottom_toTopOf="@+id/AnimeGirl1"
+        app:layout_constraintEnd_toEndOf="@+id/MainText"
+        app:layout_constraintStart_toStartOf="@+id/MainText"
+        app:layout_constraintTop_toBottomOf="@+id/MainText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
